// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivateAndSharedPipelines it renders correctly in multi user mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page"
      >
        <div
          class="tabs"
        >
          <div
            class="indicator"
          />
          <span
            style="display: inline-block; min-width: 20px; width: 20px;"
          />
          <button
            class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button active"
            tabindex="0"
            title="Only people who have access to this namespace will be able to view and use these pipelines."
            type="button"
          >
            <span
              class="MuiButton-label-10"
            >
              <span>
                Private
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-151"
            />
          </button>
          <button
            class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button"
            tabindex="0"
            title="Everyone in your organization will be able to view and use these pipelines."
            type="button"
          >
            <span
              class="MuiButton-label-10"
            >
              <span>
                Shared
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-151"
            />
          </button>
        </div>
        <div
          class="page"
        >
          <div
            class="pageOverflowHidden"
          >
            <div>
              <div
                class="MuiFormControl-root-38 filterBox"
                spellcheck="false"
                style="height: 48px; max-width: 100%; width: 100%;"
              >
                <label
                  class="MuiFormLabel-root-53 MuiInputLabel-root-42 noMargin MuiInputLabel-formControl-47 MuiInputLabel-animated-50 MuiInputLabel-shrink-49 MuiInputLabel-outlined-52"
                  data-shrink="true"
                  for="tableFilterBox"
                >
                  Filter pipelines
                </label>
                <div
                  class="MuiInputBase-root-73 MuiOutlinedInput-root-60 noLeftPadding MuiInputBase-formControl-74 MuiInputBase-adornedStart-77 MuiOutlinedInput-adornedStart-63"
                >
                  <fieldset
                    aria-hidden="true"
                    class="MuiPrivateNotchedOutline-root-90 MuiOutlinedInput-notchedOutline-67 filterBorderRadius"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="MuiPrivateNotchedOutline-legend-91"
                      style="width: 0px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="MuiInputAdornment-root-92 MuiInputAdornment-positionEnd-95"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-97"
                      focusable="false"
                      role="presentation"
                      style="color: rgb(128, 134, 139); padding-right: 16px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input-83 MuiOutlinedInput-input-68 MuiInputBase-inputAdornedStart-88 MuiOutlinedInput-inputAdornedStart-71"
                    id="tableFilterBox"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="header"
            >
              <div
                class="columnName cell selectionToggle"
              >
                <span
                  class="MuiButtonBase-root-35 MuiIconButton-root-116 MuiPrivateSwitchBase-root-112 MuiCheckbox-root-106 MuiCheckbox-colorPrimary-110"
                >
                  <span
                    class="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-97"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      class="MuiPrivateSwitchBase-input-115"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root-151"
                  />
                </span>
                <span
                  style="display: inline-block; min-width: 40px; width: 40px;"
                />
              </div>
              <div
                class="columnName"
                style="width: 20%;"
                title="Pipeline name"
              >
                <span
                  class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis"
                  role="button"
                  tabindex="0"
                  title="Sort"
                >
                  Pipeline name
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="columnName"
                style="width: 60%;"
                title="Description"
              >
                <span
                  class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis"
                  role="button"
                  tabindex="0"
                  title="Cannot sort by this column"
                >
                  Description
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="columnName"
                style="width: 20%;"
                title="Uploaded on"
              >
                <span
                  class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 MuiTableSortLabel-active-123 ellipsis"
                  role="button"
                  tabindex="0"
                  title="Sort"
                >
                  Uploaded on
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="scrollContainer"
              style="min-height: 60px;"
            >
              <div
                class="expandableContainer"
              >
                <div
                  aria-checked="false"
                  class="tableRow row"
                  role="checkbox"
                  tabindex="-1"
                >
                  <div
                    class="cell selectionToggle"
                  >
                    <span
                      class="MuiButtonBase-root-35 MuiIconButton-root-116 MuiPrivateSwitchBase-root-112 MuiCheckbox-root-106 MuiCheckbox-colorPrimary-110"
                    >
                      <span
                        class="MuiIconButton-label-121"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-97"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <input
                          class="MuiPrivateSwitchBase-input-115"
                          data-indeterminate="false"
                          type="checkbox"
                          value=""
                        />
                      </span>
                      <span
                        class="MuiTouchRipple-root-151"
                      />
                    </span>
                    <button
                      aria-label="Expand"
                      class="MuiButtonBase-root-35 MuiIconButton-root-116 expandButton"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label-121"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-97"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 17l5-5-5-5v10z"
                          />
                          <path
                            d="M0 24V0h24v24H0z"
                            fill="none"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root-151"
                      />
                    </button>
                  </div>
                  <div
                    class="cell"
                    style="width: 20%;"
                  >
                    <a
                      class="link"
                      href="/pipelines/details/run-pipeline-id"
                      title="mock pipeline name"
                    >
                      mock pipeline name
                    </a>
                  </div>
                  <div
                    class="cell"
                    style="width: 60%;"
                  >
                    <span>
                      mock pipeline description
                    </span>
                  </div>
                  <div
                    class="cell"
                    style="width: 20%;"
                  >
                    9/21/2022, 1:53:59 PM
                  </div>
                </div>
              </div>
              <div
                class="expandableContainer"
              >
                <div
                  aria-checked="false"
                  class="tableRow row"
                  role="checkbox"
                  tabindex="-1"
                >
                  <div
                    class="cell selectionToggle"
                  >
                    <span
                      class="MuiButtonBase-root-35 MuiIconButton-root-116 MuiPrivateSwitchBase-root-112 MuiCheckbox-root-106 MuiCheckbox-colorPrimary-110"
                    >
                      <span
                        class="MuiIconButton-label-121"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-97"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                        <input
                          class="MuiPrivateSwitchBase-input-115"
                          data-indeterminate="false"
                          type="checkbox"
                          value=""
                        />
                      </span>
                      <span
                        class="MuiTouchRipple-root-151"
                      />
                    </span>
                    <button
                      aria-label="Expand"
                      class="MuiButtonBase-root-35 MuiIconButton-root-116 expandButton"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label-121"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-97"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 17l5-5-5-5v10z"
                          />
                          <path
                            d="M0 24V0h24v24H0z"
                            fill="none"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root-151"
                      />
                    </button>
                  </div>
                  <div
                    class="cell"
                    style="width: 20%;"
                  >
                    <a
                      class="link"
                      href="/pipelines/details/run-pipeline-id"
                      title="mock pipeline name"
                    >
                      mock pipeline name
                    </a>
                  </div>
                  <div
                    class="cell"
                    style="width: 60%;"
                  >
                    <span>
                      mock pipeline description
                    </span>
                  </div>
                  <div
                    class="cell"
                    style="width: 20%;"
                  >
                    9/21/2022, 1:53:59 PM
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer"
            >
              <span
                class=""
              >
                Rows per page:
              </span>
              <div
                class="MuiFormControl-root-38 verticalAlignInitial rowsPerPage"
              >
                <div
                  class="MuiInputBase-root-73 MuiInput-root-134 MuiInputBase-formControl-74 MuiInput-formControl-135"
                >
                  <div
                    class="MuiSelect-root-127"
                  >
                    <div
                      aria-haspopup="true"
                      aria-pressed="false"
                      class="MuiSelect-select-128 MuiSelect-selectMenu-131 MuiInputBase-input-83 MuiInput-input-142"
                      role="button"
                      tabindex="0"
                    >
                      10
                    </div>
                    <input
                      type="hidden"
                      value="10"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-97 MuiSelect-icon-133"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="MuiButtonBase-root-35 MuiButtonBase-disabled-36 MuiIconButton-root-116 MuiIconButton-disabled-120"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiIconButton-label-121"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="MuiButtonBase-root-35 MuiButtonBase-disabled-36 MuiIconButton-root-116 MuiIconButton-disabled-120"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiIconButton-label-121"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page"
    >
      <div
        class="tabs"
      >
        <div
          class="indicator"
        />
        <span
          style="display: inline-block; min-width: 20px; width: 20px;"
        />
        <button
          class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button active"
          tabindex="0"
          title="Only people who have access to this namespace will be able to view and use these pipelines."
          type="button"
        >
          <span
            class="MuiButton-label-10"
          >
            <span>
              Private
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-151"
          />
        </button>
        <button
          class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button"
          tabindex="0"
          title="Everyone in your organization will be able to view and use these pipelines."
          type="button"
        >
          <span
            class="MuiButton-label-10"
          >
            <span>
              Shared
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-151"
          />
        </button>
      </div>
      <div
        class="page"
      >
        <div
          class="pageOverflowHidden"
        >
          <div>
            <div
              class="MuiFormControl-root-38 filterBox"
              spellcheck="false"
              style="height: 48px; max-width: 100%; width: 100%;"
            >
              <label
                class="MuiFormLabel-root-53 MuiInputLabel-root-42 noMargin MuiInputLabel-formControl-47 MuiInputLabel-animated-50 MuiInputLabel-shrink-49 MuiInputLabel-outlined-52"
                data-shrink="true"
                for="tableFilterBox"
              >
                Filter pipelines
              </label>
              <div
                class="MuiInputBase-root-73 MuiOutlinedInput-root-60 noLeftPadding MuiInputBase-formControl-74 MuiInputBase-adornedStart-77 MuiOutlinedInput-adornedStart-63"
              >
                <fieldset
                  aria-hidden="true"
                  class="MuiPrivateNotchedOutline-root-90 MuiOutlinedInput-notchedOutline-67 filterBorderRadius"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="MuiPrivateNotchedOutline-legend-91"
                    style="width: 0px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="MuiInputAdornment-root-92 MuiInputAdornment-positionEnd-95"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97"
                    focusable="false"
                    role="presentation"
                    style="color: rgb(128, 134, 139); padding-right: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input-83 MuiOutlinedInput-input-68 MuiInputBase-inputAdornedStart-88 MuiOutlinedInput-inputAdornedStart-71"
                  id="tableFilterBox"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="header"
          >
            <div
              class="columnName cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-35 MuiIconButton-root-116 MuiPrivateSwitchBase-root-112 MuiCheckbox-root-106 MuiCheckbox-colorPrimary-110"
              >
                <span
                  class="MuiIconButton-label-121"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-115"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-151"
                />
              </span>
              <span
                style="display: inline-block; min-width: 40px; width: 40px;"
              />
            </div>
            <div
              class="columnName"
              style="width: 20%;"
              title="Pipeline name"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Pipeline name
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 60%;"
              title="Description"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Description
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 20%;"
              title="Uploaded on"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 MuiTableSortLabel-active-123 ellipsis"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Uploaded on
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="scrollContainer"
            style="min-height: 60px;"
          >
            <div
              class="expandableContainer"
            >
              <div
                aria-checked="false"
                class="tableRow row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell selectionToggle"
                >
                  <span
                    class="MuiButtonBase-root-35 MuiIconButton-root-116 MuiPrivateSwitchBase-root-112 MuiCheckbox-root-106 MuiCheckbox-colorPrimary-110"
                  >
                    <span
                      class="MuiIconButton-label-121"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-97"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <input
                        class="MuiPrivateSwitchBase-input-115"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root-151"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root-35 MuiIconButton-root-116 expandButton"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label-121"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-97"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                        <path
                          d="M0 24V0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root-151"
                    />
                  </button>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  <a
                    class="link"
                    href="/pipelines/details/run-pipeline-id"
                    title="mock pipeline name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
            <div
              class="expandableContainer"
            >
              <div
                aria-checked="false"
                class="tableRow row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell selectionToggle"
                >
                  <span
                    class="MuiButtonBase-root-35 MuiIconButton-root-116 MuiPrivateSwitchBase-root-112 MuiCheckbox-root-106 MuiCheckbox-colorPrimary-110"
                  >
                    <span
                      class="MuiIconButton-label-121"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-97"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <input
                        class="MuiPrivateSwitchBase-input-115"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root-151"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root-35 MuiIconButton-root-116 expandButton"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label-121"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-97"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                        <path
                          d="M0 24V0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root-151"
                    />
                  </button>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  <a
                    class="link"
                    href="/pipelines/details/run-pipeline-id"
                    title="mock pipeline name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer"
          >
            <span
              class=""
            >
              Rows per page:
            </span>
            <div
              class="MuiFormControl-root-38 verticalAlignInitial rowsPerPage"
            >
              <div
                class="MuiInputBase-root-73 MuiInput-root-134 MuiInputBase-formControl-74 MuiInput-formControl-135"
              >
                <div
                  class="MuiSelect-root-127"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    class="MuiSelect-select-128 MuiSelect-selectMenu-131 MuiInputBase-input-83 MuiInput-input-142"
                    role="button"
                    tabindex="0"
                  >
                    10
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97 MuiSelect-icon-133"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root-35 MuiButtonBase-disabled-36 MuiIconButton-root-116 MuiIconButton-disabled-120"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-121"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root-35 MuiButtonBase-disabled-36 MuiIconButton-root-116 MuiIconButton-disabled-120"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-121"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PrivateAndSharedPipelines it renders correctly in single user mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page"
      >
        <div
          class="pageOverflowHidden"
        >
          <div>
            <div
              class="MuiFormControl-root-168 filterBox"
              spellcheck="false"
              style="height: 48px; max-width: 100%; width: 100%;"
            >
              <label
                class="MuiFormLabel-root-183 MuiInputLabel-root-172 noMargin MuiInputLabel-formControl-177 MuiInputLabel-animated-180 MuiInputLabel-shrink-179 MuiInputLabel-outlined-182"
                data-shrink="true"
                for="tableFilterBox"
              >
                Filter pipelines
              </label>
              <div
                class="MuiInputBase-root-203 MuiOutlinedInput-root-190 noLeftPadding MuiInputBase-formControl-204 MuiInputBase-adornedStart-207 MuiOutlinedInput-adornedStart-193"
              >
                <fieldset
                  aria-hidden="true"
                  class="MuiPrivateNotchedOutline-root-220 MuiOutlinedInput-notchedOutline-197 filterBorderRadius"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="MuiPrivateNotchedOutline-legend-221"
                    style="width: 0px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="MuiInputAdornment-root-222 MuiInputAdornment-positionEnd-225"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-227"
                    focusable="false"
                    role="presentation"
                    style="color: rgb(128, 134, 139); padding-right: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input-213 MuiOutlinedInput-input-198 MuiInputBase-inputAdornedStart-218 MuiOutlinedInput-inputAdornedStart-201"
                  id="tableFilterBox"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="header"
          >
            <div
              class="columnName cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-252 MuiIconButton-root-246 MuiPrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240"
              >
                <span
                  class="MuiIconButton-label-251"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-227"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-245"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-292"
                />
              </span>
              <span
                style="display: inline-block; min-width: 40px; width: 40px;"
              />
            </div>
            <div
              class="columnName"
              style="width: 20%;"
              title="Pipeline name"
            >
              <span
                class="MuiButtonBase-root-252 MuiTableSortLabel-root-263 ellipsis"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Pipeline name
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227 MuiTableSortLabel-icon-265 MuiTableSortLabel-iconDirectionDesc-266"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 60%;"
              title="Description"
            >
              <span
                class="MuiButtonBase-root-252 MuiTableSortLabel-root-263 ellipsis"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Description
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227 MuiTableSortLabel-icon-265 MuiTableSortLabel-iconDirectionDesc-266"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 20%;"
              title="Uploaded on"
            >
              <span
                class="MuiButtonBase-root-252 MuiTableSortLabel-root-263 MuiTableSortLabel-active-264 ellipsis"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Uploaded on
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227 MuiTableSortLabel-icon-265 MuiTableSortLabel-iconDirectionDesc-266"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="scrollContainer"
            style="min-height: 60px;"
          >
            <div
              class="expandableContainer"
            >
              <div
                aria-checked="false"
                class="tableRow row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell selectionToggle"
                >
                  <span
                    class="MuiButtonBase-root-252 MuiIconButton-root-246 MuiPrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240"
                  >
                    <span
                      class="MuiIconButton-label-251"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-227"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <input
                        class="MuiPrivateSwitchBase-input-245"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root-292"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root-252 MuiIconButton-root-246 expandButton"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label-251"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-227"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                        <path
                          d="M0 24V0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root-292"
                    />
                  </button>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  <a
                    class="link"
                    href="/pipelines/details/run-pipeline-id"
                    title="mock pipeline name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
            <div
              class="expandableContainer"
            >
              <div
                aria-checked="false"
                class="tableRow row"
                role="checkbox"
                tabindex="-1"
              >
                <div
                  class="cell selectionToggle"
                >
                  <span
                    class="MuiButtonBase-root-252 MuiIconButton-root-246 MuiPrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240"
                  >
                    <span
                      class="MuiIconButton-label-251"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-227"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <input
                        class="MuiPrivateSwitchBase-input-245"
                        data-indeterminate="false"
                        type="checkbox"
                        value=""
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root-292"
                    />
                  </span>
                  <button
                    aria-label="Expand"
                    class="MuiButtonBase-root-252 MuiIconButton-root-246 expandButton"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label-251"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root-227"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 17l5-5-5-5v10z"
                        />
                        <path
                          d="M0 24V0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root-292"
                    />
                  </button>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  <a
                    class="link"
                    href="/pipelines/details/run-pipeline-id"
                    title="mock pipeline name"
                  >
                    mock pipeline name
                  </a>
                </div>
                <div
                  class="cell"
                  style="width: 60%;"
                >
                  <span>
                    mock pipeline description
                  </span>
                </div>
                <div
                  class="cell"
                  style="width: 20%;"
                >
                  9/21/2022, 1:53:59 PM
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer"
          >
            <span
              class=""
            >
              Rows per page:
            </span>
            <div
              class="MuiFormControl-root-168 verticalAlignInitial rowsPerPage"
            >
              <div
                class="MuiInputBase-root-203 MuiInput-root-275 MuiInputBase-formControl-204 MuiInput-formControl-276"
              >
                <div
                  class="MuiSelect-root-268"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    class="MuiSelect-select-269 MuiSelect-selectMenu-272 MuiInputBase-input-213 MuiInput-input-283"
                    role="button"
                    tabindex="0"
                  >
                    10
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-227 MuiSelect-icon-274"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root-252 MuiButtonBase-disabled-253 MuiIconButton-root-246 MuiIconButton-disabled-250"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-251"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root-252 MuiButtonBase-disabled-253 MuiIconButton-root-246 MuiIconButton-disabled-250"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-251"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page"
    >
      <div
        class="pageOverflowHidden"
      >
        <div>
          <div
            class="MuiFormControl-root-168 filterBox"
            spellcheck="false"
            style="height: 48px; max-width: 100%; width: 100%;"
          >
            <label
              class="MuiFormLabel-root-183 MuiInputLabel-root-172 noMargin MuiInputLabel-formControl-177 MuiInputLabel-animated-180 MuiInputLabel-shrink-179 MuiInputLabel-outlined-182"
              data-shrink="true"
              for="tableFilterBox"
            >
              Filter pipelines
            </label>
            <div
              class="MuiInputBase-root-203 MuiOutlinedInput-root-190 noLeftPadding MuiInputBase-formControl-204 MuiInputBase-adornedStart-207 MuiOutlinedInput-adornedStart-193"
            >
              <fieldset
                aria-hidden="true"
                class="MuiPrivateNotchedOutline-root-220 MuiOutlinedInput-notchedOutline-197 filterBorderRadius"
                style="padding-left: 8px;"
              >
                <legend
                  class="MuiPrivateNotchedOutline-legend-221"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="MuiInputAdornment-root-222 MuiInputAdornment-positionEnd-225"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227"
                  focusable="false"
                  role="presentation"
                  style="color: rgb(128, 134, 139); padding-right: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input-213 MuiOutlinedInput-input-198 MuiInputBase-inputAdornedStart-218 MuiOutlinedInput-inputAdornedStart-201"
                id="tableFilterBox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="header"
        >
          <div
            class="columnName cell selectionToggle"
          >
            <span
              class="MuiButtonBase-root-252 MuiIconButton-root-246 MuiPrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240"
            >
              <span
                class="MuiIconButton-label-251"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-245"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
              </span>
              <span
                class="MuiTouchRipple-root-292"
              />
            </span>
            <span
              style="display: inline-block; min-width: 40px; width: 40px;"
            />
          </div>
          <div
            class="columnName"
            style="width: 20%;"
            title="Pipeline name"
          >
            <span
              class="MuiButtonBase-root-252 MuiTableSortLabel-root-263 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Pipeline name
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-227 MuiTableSortLabel-icon-265 MuiTableSortLabel-iconDirectionDesc-266"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 60%;"
            title="Description"
          >
            <span
              class="MuiButtonBase-root-252 MuiTableSortLabel-root-263 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Description
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-227 MuiTableSortLabel-icon-265 MuiTableSortLabel-iconDirectionDesc-266"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 20%;"
            title="Uploaded on"
          >
            <span
              class="MuiButtonBase-root-252 MuiTableSortLabel-root-263 MuiTableSortLabel-active-264 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Uploaded on
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-227 MuiTableSortLabel-icon-265 MuiTableSortLabel-iconDirectionDesc-266"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="scrollContainer"
          style="min-height: 60px;"
        >
          <div
            class="expandableContainer"
          >
            <div
              aria-checked="false"
              class="tableRow row"
              role="checkbox"
              tabindex="-1"
            >
              <div
                class="cell selectionToggle"
              >
                <span
                  class="MuiButtonBase-root-252 MuiIconButton-root-246 MuiPrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240"
                >
                  <span
                    class="MuiIconButton-label-251"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-227"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      class="MuiPrivateSwitchBase-input-245"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root-292"
                  />
                </span>
                <button
                  aria-label="Expand"
                  class="MuiButtonBase-root-252 MuiIconButton-root-246 expandButton"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-251"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-227"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                      <path
                        d="M0 24V0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-292"
                  />
                </button>
              </div>
              <div
                class="cell"
                style="width: 20%;"
              >
                <a
                  class="link"
                  href="/pipelines/details/run-pipeline-id"
                  title="mock pipeline name"
                >
                  mock pipeline name
                </a>
              </div>
              <div
                class="cell"
                style="width: 60%;"
              >
                <span>
                  mock pipeline description
                </span>
              </div>
              <div
                class="cell"
                style="width: 20%;"
              >
                9/21/2022, 1:53:59 PM
              </div>
            </div>
          </div>
          <div
            class="expandableContainer"
          >
            <div
              aria-checked="false"
              class="tableRow row"
              role="checkbox"
              tabindex="-1"
            >
              <div
                class="cell selectionToggle"
              >
                <span
                  class="MuiButtonBase-root-252 MuiIconButton-root-246 MuiPrivateSwitchBase-root-242 MuiCheckbox-root-236 MuiCheckbox-colorPrimary-240"
                >
                  <span
                    class="MuiIconButton-label-251"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-227"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      class="MuiPrivateSwitchBase-input-245"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root-292"
                  />
                </span>
                <button
                  aria-label="Expand"
                  class="MuiButtonBase-root-252 MuiIconButton-root-246 expandButton"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-251"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-227"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                      <path
                        d="M0 24V0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-292"
                  />
                </button>
              </div>
              <div
                class="cell"
                style="width: 20%;"
              >
                <a
                  class="link"
                  href="/pipelines/details/run-pipeline-id"
                  title="mock pipeline name"
                >
                  mock pipeline name
                </a>
              </div>
              <div
                class="cell"
                style="width: 60%;"
              >
                <span>
                  mock pipeline description
                </span>
              </div>
              <div
                class="cell"
                style="width: 20%;"
              >
                9/21/2022, 1:53:59 PM
              </div>
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <span
            class=""
          >
            Rows per page:
          </span>
          <div
            class="MuiFormControl-root-168 verticalAlignInitial rowsPerPage"
          >
            <div
              class="MuiInputBase-root-203 MuiInput-root-275 MuiInputBase-formControl-204 MuiInput-formControl-276"
            >
              <div
                class="MuiSelect-root-268"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  class="MuiSelect-select-269 MuiSelect-selectMenu-272 MuiInputBase-input-213 MuiInput-input-283"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  type="hidden"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-227 MuiSelect-icon-274"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root-252 MuiButtonBase-disabled-253 MuiIconButton-root-246 MuiIconButton-disabled-250"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-251"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-227"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
          <button
            class="MuiButtonBase-root-252 MuiButtonBase-disabled-253 MuiIconButton-root-246 MuiIconButton-disabled-250"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-251"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-227"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
